--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width", initial=scale=1.0>
-	
+	<link rel="stylesheet" href="style.css" >
+	<title>Instagram</title>
 </head>
-
 <body>
 	<div class="instagram-wrapper">
 		<div class="instagram-phone">
@@ -21,10 +21,24 @@
 			<a href="#" class="instagram-login">Continue como davidlsanmartin</a>
 			<a href="#" class="instagram-logout">Remover conta</a>
 			</div>
+			<div class="group">
+				<p class="not-account">Não é davidlsanmartin?</p>
+				<p class="not-account">
+					<span class="link-blue">Alternar contas</span>
+					ou
+					<span class="link-blue">Inscreva-se</span>
+				</p>
+			</div>
+			<div class="get-the-app"></dov>
+				<p class="get-app">Baixe o aplicativo</p>
+				<div class="download"></div>
+				<a href="#" class="app-download"></a>
+				<a href="#" class="app-download"></a>
 		</div>
 	
 	</div>
-	
+</div>
+</div>	
 </body>
 
 </html>
